--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
   "dependencies": {
     "@thirdweb-dev/react": "^3",
     "@thirdweb-dev/sdk": "^3",
+    "autoprefixer": "^10.4.13",
     "ethers": "^5.7.2",
+    "postcss": "^8.4.20",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.5.0",
+    "sass": "^1.57.0",
+    "scss": "^0.2.4",
+    "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^2",
